<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.redimed.telehealth.patient.fragment.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="180dp"
            android:layout_height="?android:actionBarSize"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="260dp"
            android:layout_alignParentBottom="true"
            android:background="#aaffffff">

            <com.redimed.telehealth.patient.utils.CirclePageIndicator
                android:id="@+id/circleIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:id="@+id/layoutHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnInformation"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/home_profile_btn"
                    android:drawableTop="@drawable/home_profile_icon"
                    android:paddingTop="15dp"
                    android:text="@string/green_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/lightFont"
                    android:textSize="@dimen/home_text_size" />

                <Button
                    android:id="@+id/btnTelehealth"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/home_appt_btn"
                    android:drawableTop="@drawable/home_appt_icon"
                    android:paddingTop="15dp"
                    android:text="@string/blue_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/lightFont"
                    android:textSize="@dimen/home_text_size" />

                <Button
                    android:id="@+id/btnContact"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/home_call_btn"
                    android:drawableTop="@drawable/home_call_icon"
                    android:paddingTop="8dp"
                    android:text="@string/red_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/lightFont"
                    android:textSize="@dimen/home_text_size" />

                <Button
                    android:id="@+id/btnFAQ"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/home_faq_btn"
                    android:drawableTop="@drawable/home_faq_icon"
                    android:paddingTop="10dp"
                    android:text="@string/orange_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/lightFont"
                    android:textSize="@dimen/home_text_size" />

            </LinearLayout>

            <Button
                android:id="@+id/btnUrgentCare"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_below="@+id/layoutHome"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/urgent_btn"
                android:textColor="@color/redFont" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <com.redimed.telehealth.patient.font.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/contain_bottom1" />

                <com.redimed.telehealth.patient.font.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contain_HEALTH"
                    android:textColor="@color/redFont" />

                <com.redimed.telehealth.patient.font.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contain_CARE"
                    android:textColor="@color/blueFont" />

                <com.redimed.telehealth.patient.font.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/contain_bottom2" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
