<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slider2"
    tools:context=".login.LoginFragment">

    <include
        android:id="@+id/toolBar"
        layout="@layout/custom_toolbar" />

    <RelativeLayout
        android:id="@+id/layoutLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/logo_redimed"
            android:contentDescription="@string/welcome"
            android:visibility="visible" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtCode"
            android:layout_width="320dp"
            android:layout_height="?android:actionBarSize"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="@string/hint_code"
            android:inputType="numberSigned"
            android:maxLength="6"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="320dp"
            android:layout_height="?android:actionBarSize"
            android:layout_marginTop="15dp"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/title_bottom_activation"
        android:textColor="@color/lightFont" />

</RelativeLayout>
