<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slider2"
    tools:context="com.redimed.telehealth.patient.activation.SignInFragment">

    <include
        android:id="@+id/toolBar"
        layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <com.redimed.telehealth.patient.font.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/text_contains"
            android:textColor="@color/lightFont" />

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="320dp"
            android:layout_height="?android:actionBarSize"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="@string/hint_fone"
            android:inputType="phone"
            android:maxLength="15"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="320dp"
            android:layout_height="?android:actionBarSize"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/btn_continue"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
