<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogConnection"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardElevation="0dp"
    card_view:cardBackgroundColor="@android:color/transparent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="270dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/bg_primary_alert">

            <ImageView
                android:id="@+id/dialogIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/icon_alert" />

            <com.redimed.telehealth.patient.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_connection"
                android:textColor="@color/lightFont"
                android:textSize="@dimen/size_title"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/bg_foreign_alert">

            <com.redimed.telehealth.patient.font.RobotoTextView
                android:id="@+id/dialogMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:textColor="@color/lightFont"
                android:text="@string/message_connection" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSkip"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/btn_foreign"
                    android:textColor="@color/lightFont"/>

                <Button
                    android:id="@+id/btnSettings"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:text="@string/btn_primary"
                    android:textColor="@color/lightFont"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>